--- a/app/src/main/res/layout/item_comment_recycler.xml
+++ b/app/src/main/res/layout/item_comment_recycler.xml
@@ -19,7 +19,17 @@
                 android:textColor="@android:color/white"
                 android:textSize="18dp"
                 />
+
             <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/textViewEmail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="email"
+                android:textColor="@android:color/holo_green_light" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+
                 android:id="@+id/textViewBody"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
