--- a/app/src/main/res/layout/item_user_recycler.xml
+++ b/app/src/main/res/layout/item_user_recycler.xml
@@ -10,20 +10,81 @@
         android:orientation="vertical"
         android:padding="16dp">
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/textViewName"
-                android:layout_width="match_parent"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textViewName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@android:color/white"
+            android:textSize="18dp" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/textViewEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@android:color/darker_gray" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/editTextTodos"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/hint_name"
-                android:textColor="@android:color/darker_gray" />
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Liczba zadań:" />
+
             <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/textViewPoints"
-                android:layout_width="match_parent"
+                    android:id="@+id/textViewTodos"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/darker_gray" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/editTextUncompleted"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/hint_password"
-                android:textColor="@android:color/darker_gray" />
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Niezrobionych zadań:" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/textViewUncompleted"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/darker_gray" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/editTextPosts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:text="Liczba postów:" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/textViewPosts"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@android:color/darker_gray" />
+        </LinearLayout>
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
